fix for comment spacing

--- a/src/assets/sass/partials/_newsfeed.scss
+++ b/src/assets/sass/partials/_newsfeed.scss
@@ -108,6 +108,7 @@
 			.comment-content {
 				padding: 5px 10px;
 				font-size: 12px;
+				line-height: 1.428571429;
 			}
 			.comment-textarea {
 				.media-body {
